# simple_shell

./: AUTHORS  CMakeLists.txt  README.md  _cmd_input_tokenizer.c  _cmd_path_search_tokenizer.c  _execve_n_suspend_till_terminates.c  _file_exists_stat.c  _get_env.c  _trim.c  enqueue_cmd_args.c  find_fullpath_2_binary.c  main.c  main.h  queue_functions.c  system_files_functions.c
